# mime

./: .gitignore  README.md  configure  pack.pl
src/: Makefile.in  configure  configure.in  error.c  mime.c
