dnl Process this file with autoconf to produce a configure script.

AC_INIT(install-sh)
AC_PREREQ([2.50])
AC_CONFIG_HEADER(config.h)

AC_MSG_CHECKING("Configuring MIME libraries")
export CC LD CFLAGS LDFLAGS
(cd maildrop/rfc822 && $SHELL ./configure --host=$host)
(cd maildrop/rfc2045 && $SHELL ./configure --host=$host)
AC_MSG_RESULT("Done")

AC_OUTPUT(Makefile)
